--- a/src/form.html
+++ b/src/form.html
@@ -12,9 +12,7 @@
   <body>
     <div class="page">
       <load src="./partials/header.html"/>
-      <main>
-        <p>Aquí debería ir el formulario y la previsualización de la tarjeta</p>
-      </main>
+      <load src="./partials/formMain.html"/>
       <load src="./partials/footer.html" />
     </div>
     <script src="./js/main.js"></script>
