--- a/src/form.html
+++ b/src/form.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Form module2 team3</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./scss/main.scss" />
     <link rel="icon" href="" />
+    <script
+      src="https://kit.fontawesome.com/a4911ed5e1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <div class="page">
-      <load src="./partials/header.html"/>
-      <load src="./partials/formMain.html"/>
+      <load src="./partials/header.html" />
+      <load src="./partials/formMain.html" />
       <load src="./partials/footer.html" />
     </div>
     <script src="./js/main.js"></script>
