--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Landing module2 team3</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/a4911ed5e1.js" crossorigin="anonymous"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/a4911ed5e1.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./scss/main.scss" />
     <link rel="icon" href="" />
   </head>
-
   <body>
     <div class="page">
       <load src="./partials/header.html" />
