--- a/src/card.html
+++ b/src/card.html
@@ -2,36 +2,35 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Zodiacards</title>
-    <link rel="icon" type="image/png" href="images/Logo darkPurple.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Ms+Madi&display=swap" rel="stylesheet">
+    <title>Tarjeta Astral</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/page.scss" />
+    <link rel="stylesheet" href="./styles/formMain.scss" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./scss/main.scss" />
-    <link rel="icon" href="" />
-    <script src="https://kit.fontawesome.com/a4911ed5e1.js"
-      crossorigin="anonymous">
-    </script>
   </head>
 
   <body>
     <div class="page">
-        <load src="./partials/header.html" />
-        <div class="preview">
-          <section id="card">
-            <h2 id="name"></h2>
-            <p id="sign"></p>
-            <p id="birthdate"></p>
-            <p id="mobile"></p>
-            <p id="instagram"></p>
-            <div id="color">Color favorito</div>
-            <img id="photo" src="" alt="Foto de perfil" />
-          </section>
-          <load src="./partials/footer.html" />
-        </div>
-       </div>
+      <load src="./partials/header.html" />
+
+      <div class="preview">
+        <section id="card" class="preview__card js_preview_card">
+          <div id="photo" class="js__profile-preview"></div>
+          <h2 id="name"></h2>
+          <p id="sign"></p>
+          <p id="birthdate"></p>
+          <p id="mobile"></p>
+          <p id="instagram"></p>
+          <p id="color">Color favorito</p>
+        </section>
+      </div>
+      <load src="./partials/footer.html" />
+    </div>
     <script src="./js/apiget.js"></script>
   </body>
 </html>
