--- a/src/card.html
+++ b/src/card.html
@@ -21,13 +21,12 @@
       <load src="./partials/header.html" />
       <div class="preview">
         <section id="card" class="preview__card js_preview_card">
-          <div id="photo" class="js__profile-preview"></div>
+          <div id="photo" class="round-img"></div>
           <h2 id="name"></h2>
           <p id="sign"></p>
           <p id="birthdate"></p>
           <p id="mobile"></p>
           <p id="instagram"></p>
-          <p id="color">Color favorito</p>
         </section>
       </div>
       <load src="./partials/footer.html" />
