--- a/src/card.html
+++ b/src/card.html
@@ -22,7 +22,7 @@
       <div class="preview">
         <section id="card" class="preview__card js_preview_card">
           <div id="photo" class="round-img"></div>
-          <h2 id="name"></h2>
+          <h2 class="nombre" id="name"></h2>
           <p id="sign"></p>
           <p id="birthdate"></p>
           <p id="mobile"></p>
