--- a/src/card.html
+++ b/src/card.html
@@ -31,6 +31,6 @@
       </div>
       <load src="./partials/footer.html" />
     </div>
-    <script src="./js/apiget.js"></script>
+    <script src="./js/main.js></script>
   </body>
 </html>
